<resources>
    <string name="app_name">Toping</string>
    <string name="toping">Toping</string>
    <string name="rent_vehicle">Giriş Yap</string>
    <string name="mobile_number_template">+90 xxx xxx xx xx</string>
    <string name="enter_confirmation">Onay kodunuzu yazınız.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="help">Yardım</string>
    <string name="setting">Ayarlar</string>
    <string name="notifications">Bildirimler</string>
    <string name="credit_cards">Kredi Kartlarım</string>
    <string name="special_offers">Kampanyalar</string>
    <string name="toping_wallet">Toping Cüzdanım</string>
    <string name="trips">Yolculuklarım</string>
    <string name="home_page">Anasayfa</string>
    <string name="driver_login">Şoför Girişi</string>
    <string name="balance">Bakiye</string>
    <string name="add_card">Kart Ekle</string>
    <string name="request_quote">Katıl</string>
    <string name="switch_on">on</string>
    <string name="update">Güncelle</string>
    <string name="delete_account">Hesabımı Sil</string>
    <string name="my_profile">Profilim</string>
    <string name="your_name">Adınız</string>
    <string name="your_lastname">Soyadınız</string>
    <string name="your_email_address">E-Mail Adresiniz</string>
    <string name="your_nationality">Uyruğunuz</string>
    <string name="your_identity_number">Kimlik Numaranız</string>
    <string name="female">Kadın</string>
    <string name="male">Erkek</string>
    <string name="lorem_insum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="what_is_toping">Toping nedir?</string>
    <string name="f_a_q">Sıkça Sorulan Sorular</string>
    <string name="toping_what_for">Toping ne işe yarar?</string>
    <string name="about_us">Hakkımızda</string>
    <string name="lorem_long">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="lorem_long_long">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="proposal">Öneri ve Şikayet</string>
    <string name="terms_of_use">Kullanım Koşulları</string>
    <string name="write_your_proposal">Öneri ve Şikayetlerinizi Yazınız</string>
    <string name="add_button">Kart Ekle</string>
    <string name="exit">Çıkış Yap</string>
    <string name="send">Gönder</string>
    <string name="lorem_short">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="driver_welcome_text">Müşterine hemen hizmet ver veya teklifi sun</string>
    <string name="login">Giriş Yap</string>
    <string name="fill_in_your_information">Bilgilerinizi Doldurun</string>
    <string name="addProfilePicture">Profil resmi ekleyin</string>
    <string name="IBAN">IBAN Sahibi Adı ve Soyadı</string>
    <string name="languages_you_speak">Konuştuğunuz Diller</string>
    <string name="next">İleri</string>
    <string name="add_vehicle">Araç Ekle</string>
    <string name="please_fill_in_vehicle_info">Lütfen hizmet vereceğiniz aracınızın bilgilerini giriniz</string>
    <string name="car_brand">Araç Markası</string>
    <string name="car_model">Araç Modeli</string>
    <string name="seating_capacity">Koltuk Sayısı</string>
    <string name="plate">Plaka</string>
    <string name="car_features">Araç Özellikleri</string>
    <string name="travel_agency_title">Seyahat Acente Ünvanı</string>
    <string name="doc_no">B2/D2 Belge No</string>
    <string name="fill_in_doc_no">Belge numarasını girin</string>
    <string name="doc_commercial_title">B2/D2 Ticari Ünvan</string>
    <string name="vehicle_docs">Araç Belgeleri</string>
    <string name="vehicle_photos">Araç Fotoğrafları</string>
    <string name="requests">Gelen Talepler</string>
    <string name="account_balance">Cari Bilgilerim</string>
    <string name="confirm">Onayla</string>
    <string name="cancel">İptal</string>
    <string name="where_are_you_going">Nereye gideceksin?</string>
    <string name="credit_card">Kredi Kartı</string>
    <string name="cash">Nakit</string>
    <string name="pay_pal">Pay Pal</string>
    <string name="log_in_as_driver">Şoför olarak <b>Giriş Yap</b></string>
    <string name="sent_code_input_API">Onay kodunuz +90 555 555 55 55 numaralı telefonunuza gönderildi.</string>
</resources>