<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.DriverWelcomeActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/welcome_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/toping_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/krona_one_regular"
                android:text="@string/toping"
                android:textColor="@color/white"
                android:textSize="22sp" />
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:layout_marginHorizontal="50dp"
            android:layout_marginBottom="30dp"
            android:text="@string/driver_welcome_text"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btnDriverLoginNow"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/round_10_white"
            android:text="@string/login"
            android:textStyle="bold"
            android:layout_marginBottom="50dp"
            android:layout_marginHorizontal="30dp"
            android:textAllCaps="false"
            android:textColor="@color/blue_text_button" />

    </LinearLayout>

</FrameLayout>